deployments/k8s/master-raft-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: godfs-master
  namespace: godfs
  labels:
    app.kubernetes.io/name: godfs-master
spec:
  serviceName: godfs-master-hs
  replicas: 5
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: godfs-master
  template:
    metadata:
      labels:
        app.kubernetes.io/name: godfs-master
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: master
          image: godfs-master:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 9090
            - name: raft
              containerPort: 9200
            - name: metrics
              containerPort: 9091
          volumeMounts:
            - name: raft
              mountPath: /var/lib/godfs/raft
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 2
            periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: raft
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
